--- a/src/nunit.xamarin/View/SummaryView.xaml
+++ b/src/nunit.xamarin/View/SummaryView.xaml
@@ -49,6 +49,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 
                 <StackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"  Orientation="Horizontal" Spacing="4" HorizontalOptions="CenterAndExpand">
@@ -111,10 +112,21 @@
                     <Label Text="Duration:" FontSize="Small" FontAttributes="Bold" />
                     <Label Text="{Binding Results.Duration, StringFormat='{0:s\\.fff} seconds'}" FontSize="Small" />
                 </StackLayout>
+                <StackLayout Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" Spacing="4">
+                    <Label Text="Export Status:" FontSize="Small" FontAttributes="Bold" />
+                    <Label Text="{Binding ExportStatus}" FontSize="Small" />
+                </StackLayout>
             </Grid>
 
         </ScrollView>
 
+        <Button Text="Export Results" HorizontalOptions="FillAndExpand" VerticalOptions="End" Command="{Binding ExportTestResultsXML}">
+        <Button.Triggers>
+                <DataTrigger TargetType="Button" Binding="{Binding HasResults}" Value="False">
+                    <Setter Property="IsEnabled" Value="False" />
+                </DataTrigger>
+            </Button.Triggers>
+        </Button>
         <Button Text="All Results" Command="{Binding ViewAllResultsCommand}" HorizontalOptions="FillAndExpand" VerticalOptions="End" >
             <Button.Triggers>
                 <DataTrigger TargetType="Button" Binding="{Binding HasResults}" Value="False">
