--- a/src/nunit.xamarin/View/TestView.xaml
+++ b/src/nunit.xamarin/View/TestView.xaml
@@ -12,7 +12,7 @@
                 BackgroundColor="{DynamicResource defaultBackground}" >
         <StackLayout Orientation="Vertical" Spacing="8" Padding="8"  HorizontalOptions="FillAndExpand" BackgroundColor="White">
             <Label Text="{Binding TestResult.Name}" TextColor="{Binding Color}" FontAttributes="Bold" FontSize="Large" />
-            <Label Text="{Binding TestResult.Test.Parent.FullName}" LineBreakMode="MiddleTruncation" FontSize="Small" />
+            <Label Text="{Binding TestResult.Test.Parent.FullName}" LineBreakMode="CharacterWrap" FontSize="Small" />
             
             <StackLayout Orientation="Horizontal" Spacing="4">
                 <Label Text="Duration:" FontSize="Small" FontAttributes="Bold" />
